--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -10,7 +10,17 @@
                 {{ post.author.username }}
             </a> {{ moment(post.timestamp).fromNow() }}
             <br>
-            {{ post.body }}
+            <span id="post{{ post.id }}">{{ post.body }}</span>
+            {% if post.language and post.language != g.locale %}
+            <br><br>
+            <span id="translation{{ post.id }}">
+                    <a href="javascript:translate(
+                                '#post{{ post.id }}',
+                                '#translation{{ post.id }}',
+                                '{{ post.language }}',
+                                '{{ g.locale }}');">Translate</a>
+            </span>
+            {% endif %}
         </td>
     </tr>
 </table>
